tests/NormalTests/paczka1/small_fuzzy/63705090.err
Error in line 1: fG9BP1g9 S755 42,9
Error in line 6: P5QeM S755 6,6
Error in line 9: P5QeM A325 11,7
